--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <form>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
-  <label for="lname">Last name:</label><br>
+  <label for="lname">
+    
+  </label><br>
   
 </form>
 
