--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <h2>Text input fields</h2>
 
 <form>
-  <label for="fname">First :</label><br>
+  <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname" value="John"><br>
   <label for="lname">
-
+    
   </label><br>
   
 </form>
