--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <input type="text" id="fname" name="fname" value="John"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname" value="Doe">
+  <input type="text" id="lname" name="lname" value="Doe">
 </form>
 
 <p>Note that the form itself is not visible.</p>
